feat: auth & user apis
